--- a/public_html/css/img_upload.css
+++ b/public_html/css/img_upload.css
@@ -46,9 +46,9 @@
 
 
 #playerImg_preview {
-	background-image: url(http://localhost/~levko/img/player/default.png);
+	background-image: url(http://billiardhub.net/img/player/default.png);
 }
 #clubImg_preview {
-	background-image: url(http://localhost/~levko/img/club/default.png);
+	background-image: url(http://billiardhub.net/img/club/default.png);
 }
 
