--- a/public_html/css/player_profile.css
+++ b/public_html/css/player_profile.css
@@ -16,7 +16,7 @@
 .player_profile_photo {
 	width: 250px;
 	height: 336px;
-	background-color: #33373B;
+	background-color: #222629;
 	float: left;
 	border-radius: 8px;
 	overflow: hidden;
