--- a/public_html/css/admin_panel.css
+++ b/public_html/css/admin_panel.css
@@ -11,7 +11,7 @@
     flex-direction: column;
     align-items: center;
     flex: 1;
-    margin: 100px 0px;
+    margin: 50px 0px 100px 0px;
 }
 .admin_header span {
     font-size: 35px;
@@ -22,6 +22,8 @@
     justify-content: center;
     align-items: center;
     margin: 0 auto;
+    margin-top: -50px;
+    margin-bottom: 50px;
     padding: 20px;
     width: 100%;
     border-bottom: 1px solid #474B4F;
