--- a/public_html/css/lobby_list.css
+++ b/public_html/css/lobby_list.css
@@ -76,7 +76,10 @@
 	font-weight: 500;
 	color: #fff;
 	text-align: center;
-	padding: 5px 10px;
+	padding: 0;
+	width: 50px;
+	max-width: 50px;
+	min-width: 50px;
 	vertical-align: middle;
 }
 .list-match-lobby-frame-section table tr.list-match-lobby-frame-details td {
