--- a/public_html/css/lobby_list.css
+++ b/public_html/css/lobby_list.css
@@ -76,7 +76,7 @@
 	font-weight: 500;
 	color: #fff;
 	text-align: center;
-	padding: 0;
+	padding: 5px 0;
 	width: 50px;
 	max-width: 50px;
 	min-width: 50px;
