--- a/public_html/css/navigation.css
+++ b/public_html/css/navigation.css
@@ -273,8 +273,15 @@ header * {
 	.login:hover{
 	    border-bottom: 4px solid #54772A;
 	}
+	.container{
+		margin-top: 100px !important;
+		padding: 0 15px;
+    	        overflow: scroll;
+		align-items: normal !important;
+    		justify-content: normal !important;
+	}
 	.sub-container{
-		margin-top: 100px;
+		margin-top: 100px !important;
 		padding: 0 15px;
     	        overflow: scroll;
 		align-items: normal !important;
