--- a/public_html/css/participants.css
+++ b/public_html/css/participants.css
@@ -5,6 +5,7 @@
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
+	width: 100%;
 }
 .participants_header {
 	display: flex;
@@ -85,7 +86,12 @@ table.participants_table .col-6 {
 .participants_table tbody tr>:nth-child(1) {
 	border-right: none;
 }
-
+.participants_table {
+	width: 100% !important;
+}
+.participants_table_container {
+	width: 100% !important;
+}
 /*******  BARS  *********/
 #list{
 	display:flex;
@@ -112,13 +118,14 @@ figure {
 	margin: 0 auto;
 	min-height: 265px;
 	max-height: 265px;
+	z-index: 0;
 }
 .players_list_item_box {
 	max-width: 230px;
 	min-width: 230px;
 	max-height: 300px;
 	min-height: 300px;
-	margin-bottom: 60px;
+	margin-bottom: 30px;
 	background-color: #474B4F;
 	float: left;
 	display: inline-block;
@@ -134,14 +141,14 @@ figure {
 	max-height: 300px;
 	border-radius: 8px;
 	filter: brightness(80%);
+	z-index: -999;
 	object-fit: cover;
 }
 .players_list_item_details {
-    position: absolute;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: flex-start;
+    justify-content: center;
     box-shadow: 0px -3px 12px 0px #222629;
     max-height: 60px;
     min-height: 60px;
@@ -150,6 +157,8 @@ figure {
     background-color: #474B4F;
     border-radius: 4px;
     border-left: 3px solid #61892F;
+    z-index: 500;
+    position: absolute;
 }
 .players_list_item_name {
 	font-size: 15px;
@@ -162,4 +171,33 @@ figure {
 	font-size: 12px;
 	margin: 0;
 	color: #969A9E;
+}
+
+/*MOBILE RESPONSIVE*/
+
+/*LIST*/
+
+@media screen and (max-width: 1000px) {
+ .players_list_search_field input {
+  width: auto;
+ }
+ .participants_table_container {
+  overflow-x: auto;
+ }
+}
+
+/*BARS*/
+
+@media screen and (max-width: 1000px) {
+ .players_list_box {
+    width: 100%;
+    overflow: auto;
+ }
+ .players_list_item_box {
+ transition: 0s;
+}
+ .players_list_item_box:hover {
+   animation-duration: 0s;
+   margin-top: 0px;
+ }
 }
