--- a/public_html/css/containers.css
+++ b/public_html/css/containers.css
@@ -1,7 +1,7 @@
 .container {
     color: #fff;
     text-align: center;
-    margin: 0 auto;
+    margin: 0 auto 100px auto;
 }
 .sub-container {
     display: flex;
