--- a/public_html/css/admin_panel.css
+++ b/public_html/css/admin_panel.css
@@ -1,5 +1,5 @@
 .admin_buttons {
-    width: 1080px;
+    width: 100%;
     margin: 0 auto;
     display: flex;
     justify-content: center;
@@ -111,4 +111,45 @@
 .details_anchor {
     display: none;
 }
+
+
+
+
+/*MOBILE RESPONSIVE*/
+
+@media screen and (max-width: 600px) {
+    .admin_buttons {
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+    }
+    .buttons {
+        margin: 20px 0px;
+    }
+    .button_tour button,
+    .button_player button,
+    .button_club button,
+    .button_league button {
+        width: 100px;
+        padding: 10px 10px;
+        font-size: 15px;
+        border-radius: 4px;
+        margin-top: 15px;
+    }
+    .button_tour span,
+    .button_player span,
+    .button_club span,
+    .button_league span {
+        font-size: 15px;
+        font-family: 'Exo 2', sans-serif;
+    }
+}
+
+
+
+
+
 
