--- a/public_html/css/admin_panel.css
+++ b/public_html/css/admin_panel.css
@@ -129,7 +129,7 @@
         margin: 0 auto;
         margin-top: -50px;
         margin-bottom: 50px;
-        padding: 20px;
+        padding: 20px 0;
         width: 100%;
         border-bottom: 1px solid #474B4F;
         box-shadow: 0 5px 10px #111415;
