--- a/public_html/css/admin_panel.css
+++ b/public_html/css/admin_panel.css
@@ -142,7 +142,7 @@
     margin: 0 auto;
     display: flex;
     justify-content: center;
-    flex-direction: column;
+    flex-direction: row;
     flex-wrap: wrap;
     }
     .buttons {
