--- a/public_html/css/available_tables.css
+++ b/public_html/css/available_tables.css
@@ -1,6 +1,5 @@
 .club_tables_container {
-	width: 1080px;
-	max-width: 1080px;
+	width: 100%;
 	margin: 0 auto;
 	display: flex;
 	justify-content: space-between;
