--- a/public_html/css/available_tables.css
+++ b/public_html/css/available_tables.css
@@ -161,3 +161,35 @@
 }
 
 
+
+/*MOBILE RESPONSIVE*/
+
+@media screen and (max-width: 600px) {
+	.busy_stable_box {
+		position: relative;
+	    z-index: 1;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		width: 100%;
+		height: 268px;
+		max-height: 268px;
+		margin: 0px 0px;
+	}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
