--- a/public_html/css/available_tables.css
+++ b/public_html/css/available_tables.css
@@ -23,7 +23,7 @@
     border-bottom: 3px solid #61892F;
 }
 .stable_containers {
-	width: 520px;
+	width: 100%;
 	margin: 50px 0px;
 }
 .busy_stable_container {
