--- a/public_html/css/available_tables.css
+++ b/public_html/css/available_tables.css
@@ -23,7 +23,7 @@
     border-bottom: 3px solid #61892F;
 }
 .stable_containers {
-	width: 100%;
+	width: 520px;
 	margin: 50px 0px;
 }
 .busy_stable_container {
@@ -178,21 +178,14 @@
 		overflow-x: auto;
 	}
 	.boxFor_plName {
-		display: flex;
-		flex-direction: row;
-		justify-content: space-between;
-		align-items: center;
-		margin: 20px 0px 20px 0px;
 		width: 100%;
 	}
 	.boxFor_imgs {
-		display: flex;
-		flex-direction: row;
-		justify-content: space-between;
-		align-items: center;
 		width: 100%;
-
 	}
+	.stable_containers {
+	width: 100%;
+}
 }
 
 
