responsive available tables (10)

--- a/public_html/css/available_tables.css
+++ b/public_html/css/available_tables.css
@@ -177,6 +177,9 @@
 		margin: 0px auto;
 		overflow-x: auto;
 	}
+	.busy_stable_box:before {
+		background-size: 300px 191px;
+	}
 	.boxFor_plName, .boxFor_imgs {
 		width: 100%;
 	}
