--- a/public_html/css/available_tables.css
+++ b/public_html/css/available_tables.css
@@ -180,10 +180,18 @@
 	.busy_stable_box:before {
 		background-size: 300px 191px;
 	}
-	.boxFor_plName, .boxFor_imgs {
+	.free_stable_box {
+		width: 300px;
+		height: 191px; 
+	}
+	.boxFor_plName {
+		margin: 40px 0px 20px 0px;
 		width: 100%;
 	}
-	
+
+	.boxFor_imgs {
+		width: 100%;
+	}
 	.stable_containers {
 		width: 100%;
 		margin: 0 auto;
@@ -201,6 +209,9 @@
 		height: 100px;
 		object-fit: cover;
 		border: 4px solid #EBEBEB;
+	}
+	.header_box {
+		font-size: 20px;
 	}
 }
 
