--- a/public_html/css/player_profile.css
+++ b/public_html/css/player_profile.css
@@ -113,7 +113,7 @@
     align-items: center;
     flex-direction: column;
     padding-bottom: 20px;
-    margin: 20px 0px;          
+    margin: 0px;          
     border-bottom: 1px solid #474B4F;
 }
 .player_profile_personalInfo table {
