--- a/public_html/css/player_profile.css
+++ b/public_html/css/player_profile.css
@@ -201,3 +201,39 @@
 .details_anchor {
 	display: none;
 }
+
+
+@media screen and (max-width: 600px) {
+ .player_profile_section02 {
+        display: flex;
+        justify-content: center;
+        flex-direction: row;
+    }
+    .player_profile_circle {
+        margin: 40px 20px;
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+        background-color: #33373B;
+        text-align: center;
+        position: relative;
+        transition: 0.5s;
+        box-shadow: 0px 3px 10px #131617;
+    }
+    .player_profile_circle .fa-trophy,
+    .player_profile_circle .fa-shield-alt {
+        font-size: 33px;
+        margin-top: 22px;
+        margin-bottom: 10px;
+        text-align: center;
+        color: white;
+    }
+}
+
+
+
+
+
+
+
+
