--- a/public_html/css/player_profile.css
+++ b/public_html/css/player_profile.css
@@ -228,6 +228,15 @@
         text-align: center;
         color: white;
     }
+    .little_circle {
+		position: absolute;
+		width: 30px;
+		height: 30px;
+		background-color: #61892F;
+		border-radius: 50%;
+		padding-top: 5px;
+		box-shadow: 2px 2px 10px 0px #33373B;
+	}
 }
 
 
