--- a/public_html/css/match_lobby.css
+++ b/public_html/css/match_lobby.css
@@ -36,10 +36,8 @@
 	box-sizing: border-box;	
 }
 .match_lobby_frame-section {
-	position: relative;
-	display: block;
-	box-sizing: border-box;
-	padding: 0px 20px;
+	display: flex;
+	justify-content: center;
 	margin-top: 60px;
 }
 .match_lobby_frame-section tbody {
@@ -71,8 +69,10 @@
 	font-weight: 500;
 	color: #fff;
 	text-align: center;
-	padding: 0px 30px;
 	vertical-align: middle;
+	width: 80px;
+	max-width: 80px;
+	min-width: 80px;
 }
 .match_lobby_frame-section table tr.match_lobby_frame-details td {
 	font-size: 12px;
