--- a/public_html/css/rating.css
+++ b/public_html/css/rating.css
@@ -10,4 +10,35 @@ table.rating_table .col-3 {
 .rating_table tbody tr>:nth-child(1) {
 	border-right: none;
 }
+.nameOf_league {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+    font-size: 25px;
+        font-weight: bold;
+}
+.second_row {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 18px;
+    font-weight: 300;
+}
+.typeOf_league {
+    display: flex;
+    flex-direction: row;
+}
+.detailsOf_league {
+    display: flex;
+    justify-content: flex-end;
+}
+@media screen and (max-width: 600px) {
+    .second_row {
+        flex-direction: column;
+        align-items: flex-start;
+        font-size: 15px;
+    }
 
