--- a/public_html/css/match_lobby.css
+++ b/public_html/css/match_lobby.css
@@ -33,7 +33,7 @@
 .match_lobby_player {
 	display: flex;
 	flex-direction: column;
-	box-sizing: border-box;	
+	box-sizing: border-box;
 }
 .match_lobby_frame-section {
 	display: flex;
@@ -136,4 +136,57 @@ table.match_lobby_table .col-5 {
     font-weight: bold;
     font-size: 19px;
 }
+
+
+
+/*MOBILE RESPNSIVE*/
+.res {
+	display: none;
+}
+
+@media screen and (max-width: 600px) {
+	section  {
+		width: 100%;
+    	overflow: auto;
+    	padding: 0 10px;
+	}
+	.match_lobby {
+		overflow: auto;
+		width: 100%;
+	}
+	.match_lobby_framesBreaksPoits_table,
+	.match_lobby_table {
+		width: 100%;
+    	overflow: auto;
+	}
+	.match_lobby_info {
+		width: 100%;
+		overflow: scroll;
+	}
+	.match_lobby_table thead th {
+	padding: 10px 0px;
+	font-size: 13px;
+}
+	.match_lobby_table .match_lobby_table_tbody tr td {
+	padding: 10px;
+}
+.match_lobby_table_tbody_odd td,
+.match_lobby_table_tbody_even td{
+	font-size: 14px;
+}
+.match_lobby_table_tbody tr>:nth-child(2),
+.match_lobby_table_tbody tr>:nth-child(4) {
+	font-size: 16px;
+}
+.res {
+	display: block;
+}
+.non_res {
+	display: none;
+}
+}
+
+
+
+
 
