--- a/public_html/css/match_lobby.css
+++ b/public_html/css/match_lobby.css
@@ -95,12 +95,11 @@
 .match_lobby_player02-name {
     font-size: 14px;
 }
-.match_lobby_player01-img,
-.match_lobby_player02-img {
-    width: 70px;
-    max-width: 70px;
-    height: 100px;
-    max-height: 100px;
+.match_lobby_player-img {
+    width: 100px;
+    max-width: 100px;
+    height: 120px;
+    max-height: 120px;
     object-fit: cover;
 }
 .match_lobby_frame-section tr th {
