--- a/public_html/css/match_lobby.css
+++ b/public_html/css/match_lobby.css
@@ -114,7 +114,13 @@
 }
 .match_lobby_player01-name,
 .match_lobby_player02-name {
-    height: 30px;
+    height: 40px;
+}
+.match_lobby_player-table {
+    height: 200px;
+    max-height: 200px;
+    min-height: 200px;
+
 }
 }
 
