--- a/public_html/css/match_lobby.css
+++ b/public_html/css/match_lobby.css
@@ -97,10 +97,13 @@
 }
 .match_lobby_player-img {
     width: 70px;
-    max-width: 170px;
-    height: 100px;
-    max-height: 100px;
+    max-width: 70px;
+    height: 90px;
+    max-height: 90px;
     object-fit: cover;
+}
+.match_lobby_frame-section {
+	margin-top: 40px;
 }
 .match_lobby_frame-section tr th {
     font-size: 14px;
@@ -114,14 +117,14 @@
 }
 .match_lobby_player01-name,
 .match_lobby_player02-name {
-    height: 40px;
-     max-height: 40px;
-    min-height: 40px;
+    height: 60px;
+     max-height: 60px;
+    min-height: 60px;
 }
 .match_lobby_player-table {
-    height: 200px;
-    max-height: 200px;
-    min-height: 200px;
+    height: 180px;
+    max-height: 180px;
+    min-height: 180px;
 
 }
 }
