--- a/public_html/css/match_lobby.css
+++ b/public_html/css/match_lobby.css
@@ -103,7 +103,7 @@
     object-fit: cover;
 }
 .match_lobby_frame-section {
-	margin-top: 40px;
+	margin-top: 30px;
 }
 .match_lobby_frame-section tr th {
     font-size: 14px;
@@ -115,11 +115,10 @@
     max-width: 40px;
     min-width: 40px;
 }
-.match_lobby_player01-name,
-.match_lobby_player02-name {
-    height: 60px;
-     max-height: 60px;
-    min-height: 60px;
+.match_lobby_player-name {
+    height: 30px;
+     max-height: 30px;
+    min-height: 30px;
 }
 .match_lobby_player-table {
     height: 180px;
