--- a/public_html/css/match_lobby.css
+++ b/public_html/css/match_lobby.css
@@ -123,7 +123,7 @@
     height: 180px;
     max-height: 180px;
     min-height: 180px;
-
+	width: 100%;
 }
 }
 
@@ -184,7 +184,7 @@ table.match_lobby_table .col-5 {
 
 
 
-/*MOBILE RESPNSIVE*/
+/*MOBILE RESPNSIVE TABLE*/
 .res {
 	display: none;
 }
