--- a/public_html/css/match_lobby.css
+++ b/public_html/css/match_lobby.css
@@ -136,7 +136,7 @@
 
 .match_lobby_table {
 	width: 700px;
-	max-width: 700px;
+	/*max-width: 700px;*/
 }
 .match_lobby_table tbody {
 	box-shadow: 0px 5px 10px #131617;
