responcive match lobby (15)

--- a/public_html/css/match_lobby.css
+++ b/public_html/css/match_lobby.css
@@ -190,11 +190,11 @@ table.match_lobby_table .col-5 {
 }
 
 @media screen and (max-width: 600px) {
-	section  {
+/*	section  {
 		width: 100%;
     	overflow: hidden;
     	padding: 0 10px;
-	}
+	}*/
 	.match_lobby {
 		overflow: hidden;
 		width: 100%;
