responcive match lobby (15)

--- a/public_html/css/match_lobby.css
+++ b/public_html/css/match_lobby.css
@@ -3,7 +3,7 @@
 	width: 700px;
 	border-top: 3px solid #61892F;
 	border-radius: 8px;
-	overflow: auto;
+	overflow-x: hidden;
 }
 .match_lobby_info {
 	padding: 12px;
@@ -190,11 +190,6 @@ table.match_lobby_table .col-5 {
 }
 
 @media screen and (max-width: 600px) {
-/*	section  {
-		width: 100%;
-    	overflow: hidden;
-    	padding: 0 10px;
-	}*/
 	.match_lobby {
 		overflow: hidden;
 		width: 100%;
