responcive lobby list (02)

--- a/public_html/css/lobby_list.css
+++ b/public_html/css/lobby_list.css
@@ -103,7 +103,9 @@ tr.list-match-lobby-frame-details td {
 /*MOBILE RESPONSIVE*/
 
 @media screen and (max-width: 600px) {
- 
+.list-match-lobby {
+	width: 100%;
+}
 .list-match-lobby-player-img {
     width: 70px;
     max-width: 70px;
