--- a/public_html/css/lobby_list.css
+++ b/public_html/css/lobby_list.css
@@ -2,7 +2,7 @@
 	display: inline-block;
 	width: 700px;
 	max-width: 700px;
-	margin-top: 40px;
+	margin-top: 30px;
 	background-color: #474B4F;
 	border-radius: 8px;
 }
@@ -79,9 +79,9 @@
 	color: #fff;
 	text-align: center;
 	padding: 5px 0;
-	width: 50px;
-	max-width: 50px;
-	min-width: 50px;
+	width: 45px;
+	max-width: 45px;
+	min-width: 45px;
 	vertical-align: middle;
 }
 .list-match-lobby-frame-section table tr.list-match-lobby-frame-details td {
@@ -139,6 +139,9 @@ tr.list-match-lobby-frame-details td {
     max-height: 180px;
     min-height: 180px;
 	width: 100%;
+}
+.list-match-lobby-player-table {
+    padding-top: 10px;
 }
 }
 
