--- a/public_html/css/match_lobby.css
+++ b/public_html/css/match_lobby.css
@@ -223,7 +223,7 @@ table.match_lobby_table .col-5 {
 .non_res {
 	display: none;
 }
-.tour_menu_box_700, .nameOf_tour, .second_row {
+.tour_menu_box_700, .nameOf_tour, .second_row, .tournament_header_700 {
 	width: 100%;
 }
 }
