--- a/public_html/css/tournament_lobby.css
+++ b/public_html/css/tournament_lobby.css
@@ -13,12 +13,28 @@
     background-color: #61892F;
     font-weight: normal;
 }
+.reg_button_done {
+    display: flex;
+    justify-content: flex-end;
+}
+.reg_button_done button {
+ border-radius: 4px;
+ border: none;
+ color: #86C232;
+ font-size: 15px;
+ text-align: center;
+ width: 200px;
+ height: 38px;
+ padding:0 10px;
+ background-color: #30363B;
+ font-weight: normal;
+}
 .reg_button button:hover {
     background-color: #4F7027;
     cursor: pointer;
 }
 .name_icon{
-    position: absolute;
+    position: static;
     text-align: left;
 }
 
@@ -29,14 +45,9 @@
         align-items: flex-start;
   }
  .reg_button button {
-        border-radius: 4px;
-        border: none;
-        color: white;
-        font-size: 15px;
-        text-align: center;
-        width: 200px;
-        height: 38px;
-        background-color: #61892F;
+        margin-top: 20px;
+    }
+ .reg_button_done button {
         margin-top: 20px;
     }
  .name_icon{
