--- a/public_html/css/live_match_lobby.css
+++ b/public_html/css/live_match_lobby.css
@@ -1,6 +1,7 @@
 body {
 	font-family: 'Exo 2', sans-serif;
 	background-color: #222629;
+	height: 100%;
 }
 * {
     -webkit-box-sizing: border-box;
@@ -26,7 +27,7 @@ table {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    margin: 30px 0;
+    margin: 5px 0;
 }
 .live_match_info {
     display: flex;
