bigger text and numbers (01)

--- a/public_html/css/live_match_lobby.css
+++ b/public_html/css/live_match_lobby.css
@@ -101,7 +101,7 @@ table {
     border-radius: 6px;
     overflow: hidden;
 }
-.live-match-lobby-player-name {
+.live-player-name span {
     color: white;
     font-size: 30px;
 }
