bigger text and numbers (02)

--- a/public_html/css/live_match_lobby.css
+++ b/public_html/css/live_match_lobby.css
@@ -103,7 +103,7 @@ table {
 }
 .live-player-name span {
     color: white;
-    font-size: 30px;
+    font-size: 30px !important;
 }
 .live-match-lobby-player-img {
     width: 240px;
