--- a/public_html/css/live_match_lobby.css
+++ b/public_html/css/live_match_lobby.css
@@ -14,8 +14,8 @@ table {
 }
 .container {
     text-align: center;
-    width: 1080px;
-    margin: 0 auto;
+    width: 100%;
+    margin: 50 auto;
 }
 .margin-b_50{
 	margin-bottom: 50px;
@@ -75,7 +75,7 @@ table {
     display: flex;
     justify-content: space-between;
     flex-direction: row;
-    width: 1080px;
+    width: 100%;
     background-color: #54782A;
     box-shadow: 0px -5px 40px #151719;
     border-radius: 8px;
