--- a/public_html/css/live_match_lobby.css
+++ b/public_html/css/live_match_lobby.css
@@ -99,7 +99,9 @@ table {
     background-color: #6C9C29;
 }
 .live-player-name {
+    width: 100%;
     margin-top: 20px;
+    padding: 10px;
     border-left: 3px solid #3B531E;
     border-right: 3px solid #3B531E;
     border-radius: 6px;
@@ -110,43 +112,43 @@ table {
     font-size: 40px;
 }
 .live-match-lobby-player-img {
-    width: 300px;
+    width: 100%;
     max-width: 300px;
-    height: 379px;
-    max-height: 379px;
+    height: 420px;
+    max-height: 420px;
     object-fit: cover;
     border: 8px solid #3B531E;
     border-radius: 8px;
 }
 .live-match-lobby-frame-section tr th {
-    font-size: 15px;
+    font-size: 35px;
     font-weight: 300;
     background-color: #3B531E;
     color: #fff;
     text-align: center;
-    padding: 10px 30px;
+    padding: 10px;
     vertical-align: middle;
     text-transform: uppercase;
 }
 .live-match-lobby-frame-section tr td {
-    font-size: 35px;
+    font-size: 75px;
     font-weight: 500;
     color: #e5efeb;
     text-align: center;
-    padding: 5px 40px;
+    /*padding: 5px 40px;*/
     vertical-align: middle;
 }
 .live-match-lobby-frame-section {
-    padding: 0px 60px;
-    margin-top: 70px;
+    padding: 0px 50px;
+    margin-top: 90px;
 }
 .live-match-lobby-frame-section table tr.live-match-lobby-frame-details td {
-    font-size: 14px;
+    font-size: 20px;
     background-color: #54782A;
     color: #fff; /*#80CF49;*/
     text-align: center;
     border: solid 1px #014027;
-    border-bottom: solid 10px #54782A;
+    border-bottom: solid 40px #54782A;
     padding: 5px 0;
     vertical-align: middle;
 }
