--- a/public_html/css/live_match_lobby.css
+++ b/public_html/css/live_match_lobby.css
@@ -52,7 +52,7 @@ table {
 }
 .live-match-lobby-table-num {
     color: white;
-    font-size: 30px;
+    font-size: 40px;
     margin-right: 20px;
 }
 .live-match-lobby-info {
@@ -106,6 +106,7 @@ table {
     border-right: 3px solid #3B531E;
     border-radius: 6px;
     overflow: hidden;
+    background-color: #3B531E;
 }
 .live-match-lobby-player-name {
     color: white;
