--- a/public_html/css/match_lobby.css
+++ b/public_html/css/match_lobby.css
@@ -50,7 +50,7 @@
 .match_lobby_player-img {
 	width: 120px;
 	max-width: 120px;
-	height: auto;
+	height: 170px;
 	max-height: 170px;
 	border-radius: 4px;
 	object-fit: cover;
