object-fit: cover;

--- a/public_html/css/player_profile.css
+++ b/public_html/css/player_profile.css
@@ -26,7 +26,7 @@
 .player_profile_img {
 	width: 100%;
 	border-radius: 4px;
-	object-fit: contain;
+	object-fit: cover;
 }
 .player_profile_personalInfo {
 	width: 650px;
