--- a/public_html/css/participants.css
+++ b/public_html/css/participants.css
@@ -138,6 +138,7 @@ figure {
 }
 .players_list_item_photo {
 	width: 100%;
+	height: 300px;
 	max-height: 300px;
 	border-radius: 8px;
 	filter: brightness(80%);
