--- a/public_html/css/lobby_list.css
+++ b/public_html/css/lobby_list.css
@@ -59,7 +59,7 @@
 .list-match-lobby-player-img{
 	width: 120px;
 	max-width: 120px;
-	height: auto;
+	height: 170px;
 	max-height: 170px;
 	border-radius: 4px;
 	object-fit: cover;
