--- a/public_html/css/live_match_lobby.css
+++ b/public_html/css/live_match_lobby.css
@@ -96,7 +96,7 @@ table {
     box-shadow: 0px 0px 20px #3B531E;
     border-radius: 8px;
     /*border: 1px solid #fff;*/
-    background-color: #6C9C29;
+    background-color: #DEC27A;
 }
 .live-player-name {
     width: 100%;
