--- a/public_html/css/live_match_lobby.css
+++ b/public_html/css/live_match_lobby.css
@@ -141,6 +141,8 @@ table {
 .live-match-lobby-frame-section {
     padding: 0px 50px;
     margin-top: 90px;
+    display: flex;
+    justify-content: center;
 }
 .live-match-lobby-frame-section table tr.live-match-lobby-frame-details td {
     font-size: 20px;
