--- a/public_html/css/live_match_lobby.css
+++ b/public_html/css/live_match_lobby.css
@@ -80,14 +80,14 @@ table {
     background-color: #54782A;
     box-shadow: 0px -5px 40px #151719;
     border-radius: 8px;
-}
-.live-match-lobby-player-table div {
     flex: 1;
 }
 .live-match-lobby-player {
+    width: 30%;
     padding: 20px;
 }
 .live-match-lobby-frame-section {
+    flex: 1;
 }
 
 
