--- a/public_html/css/live_match_lobby.css
+++ b/public_html/css/live_match_lobby.css
@@ -166,6 +166,10 @@ table {
 .live-match-lobby-frame-table tr th {
 	border-radius: 2px;
 }
+.empty_match_vs {
+    color: #486724;
+    font-size: 50px;
+}
 .button_push {
     display: flex;
     flex-direction: column;
