empty match modified

--- a/public_html/css/live_match_lobby.css
+++ b/public_html/css/live_match_lobby.css
@@ -65,6 +65,7 @@ table {
     font-size: 30px;
     border-radius: 8px;
     border-top: 3px solid #61892F;
+    text-align: center;
 }
 
 /*VERSUS SECTION*/
