--- a/public_html/css/live_match_lobby.css
+++ b/public_html/css/live_match_lobby.css
@@ -112,6 +112,7 @@ table {
 .live-match-lobby-player-name {
     color: white;
     font-size: 40px;
+    text-align: center;
 }
 .live-match-lobby-player-img {
     width: 100%;
@@ -144,7 +145,7 @@ table {
 }
 .live-match-lobby-frame-section {
     padding: 0px 50px;
-    margin-top: 90px;
+    margin-top: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -170,6 +171,10 @@ table {
 .empty_match_vs {
     color: #486724;
     font-size: 150px;
+}
+.finished_match_sing {
+    font-size: 90px;
+    margin-bottom: 50px;
 }
 .button_push {
     display: flex;
