--- a/public_html/css/live_match_lobby.css
+++ b/public_html/css/live_match_lobby.css
@@ -101,7 +101,6 @@ table {
 }
 .live-player-name {
     width: 100%;
-    margin-top: 20px;
     padding: 10px;
     border-left: 3px solid #3B531E;
     border-right: 3px solid #3B531E;
@@ -109,7 +108,7 @@ table {
     overflow: hidden;
     background-color: #3B531E;
     text-align: center;
-    margin: 0 auto;
+    margin: 20px auto 0 auto;
 }
 .live-match-lobby-player-name {
     color: white;
@@ -176,7 +175,7 @@ table {
     font-size: 150px;
 }
 .live-match-lobby-frame-section table tr.finished_match_sing td {
-    font-size: 90px;
+    font-size: 40px;
     margin-bottom: 50px;
 }
 .button_push {
