--- a/public_html/css/live_match_lobby.css
+++ b/public_html/css/live_match_lobby.css
@@ -176,7 +176,7 @@ table {
 }
 .live-match-lobby-frame-section table tr.finished_match_sing td {
     font-size: 40px;
-    margin-bottom: 50px;
+    padding-bottom: 50px;
 }
 .button_push {
     display: flex;
