--- a/public_html/css/live_match_lobby.css
+++ b/public_html/css/live_match_lobby.css
@@ -156,7 +156,7 @@ table {
 .live-match-lobby-frame-section table tr.live-match-lobby-frame-details td {
     font-size: 20px;
     background-color: #54782A;
-    color: #fff; /*#80CF49;*/
+    color: #fff;
     text-align: center;
     border: solid 1px #014027;
     border-bottom: solid 40px #54782A;
