remove left padding from youtube_logo

--- a/public_html/css/match_lobby.css
+++ b/public_html/css/match_lobby.css
@@ -90,7 +90,7 @@
 .fa-youtube {
     color: #FF1F1C;
     font-size: 30px;
-    padding: 5px;
+    padding: 5px 5px 5px 0;
 }
 .youtube_logo{
     width: 700px;
