--- a/public_html/css/live_match_lobby.css
+++ b/public_html/css/live_match_lobby.css
@@ -155,6 +155,7 @@ table {
     padding: 0px 50px;
     /*margin-top: 30px;*/
     display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     margin: 0 auto;
