--- a/public_html/css/live_match_lobby.css
+++ b/public_html/css/live_match_lobby.css
@@ -182,11 +182,13 @@ table {
     font-size: 150px;
 }
 .live-match-lobby-frame-section span {
-    font-size: 40px;
-    margin: 20px 0 70px 0;
+    font-size: 35px;
+    margin-top: 30px;
     background-color: #222629;
     border-radius: 4px;
     padding: 10px;
+    color: white;
+    text-transform: uppercase;
 }
 .button_push {
     display: flex;
