--- a/public_html/css/bracket.css
+++ b/public_html/css/bracket.css
@@ -170,7 +170,8 @@
 
 @media screen and (max-width: 1000px) {
 	.bracket_section {
-		transform: scale(0.5);
+		/*transform: scale(0.5);*/
+		zoom: 0.5;
 		width: 100%;
 	}
 }
